# walkthe

./: .gitignore  PHASE2_SUMMARY.md  README.md  codecov.yml  create_animation.sh  pom.xml
.github/workflows/: ci.yml  release.yml  rust-gpu-ci.yml
lattice-gpu/: Cargo.toml
lattice-gpu/src/: lib.rs  main.rs  render_shader.wgsl  shader.wgsl  viewer.rs
lattice-gpu/tests/: energy_conservation_test.rs
src/main/java/com/plancklattice/: Animation3DGenerator.java  AnimationGenerator.java  AnnealingEngine.java  Discrete3DDemo.java  DiscreteDemo.java  DiscreteLattice.java  DiscreteLattice3D.java  DiscreteVisualizer.java  DiscreteVisualizer3D.java  DiscreteVsContinuousBenchmark.java  EMPropagator.java  FixedPointBenchmark.java  Integrator.java  Main.java  PackingType.java  ParallelBenchmark.java  ParticleDetector.java  ParticlePattern.java  PlanckLattice.java  QuantizedLattice.java  SimulationEngine.java  VectorForces.java  VectorProbe.java  VectorWidthAnalysis.java  Visualizer.java
src/test/java/com/plancklattice/: AnnealingEngineTest.java  DiscreteLatticeTest.java  EMPropagatorTest.java  IntegratorTest.java  PackingTypeTest.java  ParticleDetectorTest.java  ParticlePatternTest.java  PlanckLatticeTest.java  SimulationEngineTest.java  VectorForcesTest.java  VisualizerTest.java
